--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: 4%;
-}
+
+
 .card{
-  margin: 10px;
-  padding: 5px;
+  margin: auto;
+  padding: 15px;
+  max-width: 1500px;
 }
 img {
   width: 300px;
   height: 300px;
   object-fit: cover;
+}
+.image-1 {
+  z-index: 1;
+}
+.image-2 {
+  position: absolute;
+  height:110%;
+  left:200px;
+  top:-10px;
+  overflow: visible;
+}
+
+.table__header {
+  cursor: pointer;
+}
+
+.table th {
+  cursor: pointer;
 }
